2002-08-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: Integrated GSXPath code by Nicola Pero
	provides an API to use the xpath support built into libxml from
	version 2.3 onwards.
	* Source/NSThread.m: Implement new priority methods.
	* Source/NSObject.m: Raise exception when passed null selector.

2002-08-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: ([-writeToFile:atomically:]) Removed bogus line
	which deleted files when it shouldn't.
	Added new MacOS-X methods supporting NSData objects where the bytes
	are not owned by the data object.  Removed GNUstep extension which
	provided this functionality before.
	* Source/NSUserDefaults.m: Use distributed lock to ensure that there
	is no possible window when the defaults file is invalid ... not all
	systems guarantee that the rename() system call is atomic.
	* Source/NSArray.m: New MacOS-X methods ([-initWithArray:copyItems:])
	([-exchangeObjectAtIndex:withObjectAtIndex:])
	* Source/NSTimer.m: Update for compatibility with latest MacOS-X
	* Source/NSObject.m: New ([+isSubclassOfClass:]) and perform
	cancellation from MacOS-X
	* Source/NSRunloop.m: New perform cancellation method from MacOS-X
	proofreading help/fixes from David Ayers.
 
2002-08-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/WindowsFileHandle.m: Removed ... no longer used.
	* Source/GSHTTPURLHandle.m: Don't use getpid() ... not portable.
	* Tools/gdomap.c: Don't use getuid() under windoze. 

2002-08-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: ([-initFileURLWithPath:]) check to see if path is
	a directory and append a trailing slash if necessary.  Remove hack
	to refrain from stripping last patch component in file URLs.

2002-08-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Hacks for compatibility with MacOS-X in returning
	path of a file URL ... the RFC says we should only return a path
	for a generic URL (scheme://user:passwd@host:port/path#frag?query)